--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,9 +41,13 @@ header{
 #logo{
     margin-left: 100px ;
 }
+
 nav{
    font-family: var(--Barlow);
    margin-left: 1000px;
+}
+nav #hamburger{
+    display: none;
 }
 nav ul li{
     display: inline-block;
@@ -247,6 +251,7 @@ footer #icons img{
     nav{
         margin-left: 550px;
      }
+     
      #hero img{
         margin-top: -100px;
     }
@@ -299,8 +304,10 @@ footer #icons img{
     }
     
 
-    @media  screen and (max-width: 1440px) {
-
+    @media  screen and (max-width: 1280px) {
+        #hamburger{
+            display: block
+        }
         nav{
             margin-left: 370px;
          }
@@ -345,5 +352,65 @@ footer #icons img{
             
         }
 
+    }
+
+
+    @media  screen and (max-width: 768px) {
+        header{
+            position: absolute;
+            height: 100px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 1;
+            padding-top: 30px;
+        }
+        
+        #logo{
+            margin-left: 70px ;
+        }
+        
+        nav #hamburger{
+            display: block;
+            margin: 0 0 0 100px;
+            cursor: pointer;
+        }
+        #mob-menu{
+            display: none;
+        }
+        nav ul li{
+            padding: 0 30px;
+        }
+        nav ul li a{
+            color: var(--White);
+            text-decoration: none;
+        }
+        ul li{
+            list-style: none;
+        }
+        
+        #btn-contact{
+            background-color: var(--White);
+            margin: 0 100px 0 30px;
+            font-family: var(--Fraunces);
+            text-transform: uppercase;
+            border: none;
+            padding: 20px 30px;
+            border-radius: 40px;
+        }
+        #btn-contact a{
+            color: var(--Very-dark-desaturated-blue);
+            text-decoration: none;
+        }
+
+    }
+
+
+
+
+
+    @media  screen and (max-width: 375px) {
+
+        
     }
 }
